Fix rowSpan missing border

--- a/custom.css
+++ b/custom.css
@@ -532,6 +532,17 @@ td {
   vertical-align: top;
 }
 
+/* give rowSpan left border */
+.rowSpan {
+  border-right: none;
+  border-left: 1px solid #d0d3d0;
+}
+
+.dark .rowSpan {
+  border-right: none;
+  border-left: 1px solid #4e5251;
+}
+
 /* Currencies Table */
 
 .currenciesTable {
